
  [12889] nptl: Fix race between pthread_kill and thread exit
  [15533] dynamic-link: LD_AUDIT introduces an avoidable performance
    degradation
  [19193] nptl: pthread_kill, pthread_cancel should not fail after exit
  [22542] CVE-2022-23219: Buffer overflow in sunrpc clnt_create for "unix"
  [23734] la_symbind*() doesn't get called when LD_BIND_NOW is set
  [26643] register x8 and quad sized NEON registers are not properly
    saved when using ld_audit on aarch64
  [28036] Incorrect types for pthread_mutexattr_set/getrobust_np
  [28061] dynamic-link: A failing dlmopen called by an auditor crashed
  [28062] dynamic-link: Suppress audit calls when a (new) namespace is
    empty
  [28096] elf: audit calls that uses static tls might fail
  [28182] _TIME_BITS=64 in C++ has issues with fcntl, ioctl, prctl
  [28223] mips: clone does not align stack
  [28310] Do not use affinity mask for sysconf (_SC_NPROCESSORS_CONF)
  [28338] undefined behavior in __tzfile_compute with oddball TZif file
  [28340] ld.so crashes while loading a DSO with a read-only dynamic section
  [28349] libc: Segfault for ping -R on qemux86 caused by recvmsg()
  [28350] libc: ping receives SIGABRT on lib32-qemux86-64 caused by
    recvmsg()
  [28353] Race condition in __opensock
  [28357] deadlock between pthread_create and ELF constructors
  [28361] nptl: Avoid setxid deadlock with blocked signals in thread exit
  [28407] pthread_kill assumes that kill and tgkill are equivalent
  [28524] Conversion from ISO-2022-JP-3 with iconv may emit spurious NULs
  [28532] powerpc64[le]: CFI for assembly templated syscalls is incorrect
  [28607] Masked signals are delivered on thread exit
  [28678] nptl/tst-create1 hangs sporadically
  [28700] "dns [!UNAVAIL=return] files" NSS default for hosts is not useful
  [28702] RISC-V: clone does not align stack
  [28703] RISC-V: _dl_init might be called with unaligned stack
  [28704] elf/tst-cpu-features-cpuinfo fails for KVM guests on some AMD systems